[package]
name = "regex-filter"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = { path = "/Users/telant/Documents/fluvio/crates/fluvio-smartmodule" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.13.0"
regex = "1.6.0" # Add to the bottom of this section like this

[profile.release-lto]
inherits = "release"
lto = true
